--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     font-variant:normal;
     font-weight:normal;
     line-height:normal;
-	background: #ffffff;
+	background-color: #f1f2f6;
 	margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
 	padding: 0;
 	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
@@ -41,46 +41,196 @@ body {
     padding: 0;
 }
 
+a {
+    color: #0d6efd;
+    text-decoration: underline;
+}
+
 #headerWrap {
-	width:100%;
-	text-align:center;
+    width: 100%;
+    height: 100px;
+    min-height: 100px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background: none #0052cc 100% 0 no-repeat;
 }
 
 
 #header {
-	width:940px;
-	text-align:center;
-	height:18px;
-	min-height: 100px;
-    margin:0 auto;
-    padding:3px 0px;
+	padding-top: 30px;
+    width: 1110px;
 }
 
-#header a
-{
-	color:#999999;
-	font-size:11px;
-	font-family:Arial;
-	text-decoration:none;
+#header #headerTop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-#header a:hover
-{
-	text-decoration:underline;
+#header #headerTop #logo {
+    text-align: left;
+    align-items: center;
+    display: flex;
+}
+
+.navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+}
+
+#header #headerTop .navbar {
+    display: flex;
+    padding: 0;
+}
+
+.navbar-expand {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+}
+
+.navbar-nav {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.navbar-expand .navbar-nav {
+    flex-direction: row;
+}
+
+.nav-link {
+    display: block;
+    padding: .5rem 1rem;
+    color: #0d6efd;
+    text-decoration: none;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+.navbar-nav .nav-link {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.navbar-expand .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: .5rem;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: hsla(0,0%,100%,.55);
+}
+
+#header #headerTop .navbar.navbar-dark .navbar-nav .nav-link {
+    color: hsla(0,0%,100%,.8);
+    padding: 0 40px 0 0;
+    font-size: 14px;
+    line-height: 24px;
+    display: flex;
+}
+
+#header #headerTop .navbar.navbar-dark .navbar-nav .nav-link:hover{
+	color:#fff
+}
+
+#header #headerTop .navbar.navbar-dark .navbar-nav .nav-link span {
+    padding-left: 13px;
+}
+
+#header #headerTop #headerRight {
+    display: flex;
+    text-align: revert;
+    justify-items: center;
+    align-items: center;
+}
+
+#header #headerTop #headerRight .downIcon {
+    position: relative;
+    cursor: pointer;
+}
+
+#header #headerTop #headerRight .downIcon .downNav {
+    display: none;
+    position: absolute;
+    top: 40px;
+    left: -25px;
+    margin: 0;
+    padding: 0;
+    color: #0052cc;
+    background-color: #fff;
+    border-radius: 5px;
+    list-style-type: none;
+    flex-direction: column;
+    justify-items: flex-start;
+    align-items: flex-start;
+    font-size: 13px;
+}
+
+#header #headerTop #headerRight .downIcon:hover .downNav{
+	display:flex
+}
+
+#header #headerTop #headerRight .downIcon .downNav li {
+    display: flex;
+    padding: 5px 40px 5px 10px;
+    font-weight: 400;
+}
+
+#header #headerTop #headerRight .downIcon .downNav li:hover{
+	font-weight:700;
+	background-color:rgba(143,141,146,.08);
+}
+
+#header #headerTop #headerRight .downIcon .downNav li a {
+    display: flex;
+    width: 100%;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 #contentWrap
 {
 	width:100%;
 	text-align:center;
+	background-color: #f1f2f6;
+	display: flex;
+	flex-direction: column;
+    align-items: center;
+}
+
+#contentWrap h4 {
+    font-family: Arial, Helvetica;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    border: 0;
+    width: 1110px;
+    margin: 40px 0 0;
+    text-align: left;
+    padding: 0 30px;
 }
 
 #content {
-	width:940px;
-	text-align:left;
-    margin:0 auto;
-    padding-top:10px;
-    line-height:9px;
+	display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+	width: 1068px;
+    align-items: flex-start;
+    min-height: 400px;
+    margin-bottom: 4rem!important;
+    background-color: #fff;
+    border-radius: 16px;
+    border: 1px solid #f5f5f5;
+    margin-top: 31px;
+    padding: 20px;
 }
 
 #content p
@@ -91,7 +241,8 @@ body {
 #content h3
 {
 	padding: 20px 0;
-	text-align:center;
+	text-align:center;    
+	width: 100%;
 }
 
 #content table
@@ -106,6 +257,7 @@ body {
 	padding:0px auto;
 	margin:0 auto;
 	text-align:center;	
+	background-color: #f1f2f6;
 }
 
 #footerWrap {
@@ -126,12 +278,14 @@ form{
 	display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 form input[type="text"],
 form input[type="date"],
 form input[type="tel"],
-form input[type="email"]
+form input[type="email"],
+form input[type="password"]
 {
 	display: flex;
     padding:10px 10px;
@@ -154,4 +308,115 @@ form input[type="submit"]
     color:#fff;
     text-align: center;
     justify-content: center;
+}
+
+#pnlTop{
+	display: flex;
+	flex-direction: row;
+	margin: 0px;
+	width: 100%;
+	justify-content: space-between;
+}
+
+#content #pnlTop h3{
+	display: flex;
+	padding: 0px;
+	width: auto;
+}
+
+#content #pnlTop a{
+	display: flex;
+}
+
+.pass {
+	display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    border-radius: 0;
+    padding: 3px 20px;
+    margin: 5px 0px 0;
+    width: calc(100% - 40px);
+    align-items: center;
+    justify-items: center;
+    align-content: space-between;
+    flex-wrap: wrap;
+    flex-basis: auto;
+    border-radius: 16px;
+    gap: 22px;
+}
+
+.pass:hover {
+    background: rgba(143,146,161,.05);
+}
+
+.pass.header {
+    flex-direction: row;
+    font-weight: 500;
+    align-items: center;
+    background: rgba(143,141,146,.08);
+    color: #8f92a1;
+    gap: 20px;
+    height: 40px;
+    align-content: center;
+    margin: 14px 0px 0;
+}
+
+.pass div {
+    display: flex;
+    flex-direction: row;
+    font-size: 12px;
+    color: hsla(0,0%,9%,.8);
+    align-items: center;
+}
+
+.pass div.name {
+    width: 200px;
+    font-weight: 700;
+    cursor: pointer;
+    text-align: left;
+}
+
+.pass div.type {
+    width: 100px;
+    text-align: left;
+}
+
+.pass.header div {
+    color: #8f92a1;
+    font-size: 10px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.pass div.buttons {
+    gap: 10px;
+    width: 120px;
+    justify-content: flex-end;
+}
+
+.pass div.buttons a {
+    cursor: pointer;
+    background-color: rgba(143,141,146,.08);
+    color: #8f92a1;
+    border-radius: 16px;
+    width: 24px;
+    height: 24px;
+    display: grid;
+    overflow: hidden;
+    justify-content: center;
+    align-content: center;
+}
+
+.pass div.buttons .copy {
+    border-radius: 16px;
+    background-color: rgba(143,141,146,.08);
+    color: #8f92a1;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    align-content: center;
 }
