--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,14 @@ form input[type="submit"]
 	display: flex;
 }
 
+#pnlGrid,
+#pnlGrid2,
+#pnlGrid3{
+	display: flex;
+	width: 100%;	
+    flex-direction: column;
+}
+
 .pass {
 	display: flex;
     flex-direction: row;
