--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ form input[type="text"],
 form input[type="date"],
 form input[type="tel"],
 form input[type="email"],
-form input[type="password"]
+form input[type="password"],
+form textarea
 {
 	display: flex;
     padding:10px 10px;
@@ -351,7 +352,7 @@ form input[type="submit"]
     flex-wrap: wrap;
     flex-basis: auto;
     border-radius: 16px;
-    gap: 22px;
+    gap: 20px;
 }
 
 .pass:hover {
@@ -364,10 +365,11 @@ form input[type="submit"]
     align-items: center;
     background: rgba(143,141,146,.08);
     color: #8f92a1;
-    gap: 20px;
+    gap: 10px;
     height: 40px;
     align-content: center;
     margin: 14px 0px 0;
+    justify-content: space-between;
 }
 
 .pass div {
@@ -391,10 +393,12 @@ form input[type="submit"]
 }
 
 .pass.header div {
+    display: flex;
     color: #8f92a1;
     font-size: 10px;
     cursor: pointer;
     text-transform: uppercase;
+    gap: 20px;
 }
 
 .pass div.buttons {
@@ -431,17 +435,17 @@ form input[type="submit"]
 }
 
 a.btnCreate {
-    padding: 6px 15px;
+    padding: 7px 20px;
     cursor: pointer;
     display: flex;
     width: auto;
     margin: 0;
     background: #0052cc;
-    border-radius: 25px;
+    border-radius: 14px;
     font-style: normal;
     font-weight: 400;
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 10px;
+    line-height: 14px;
     text-align: center;
     color: #fff;
     text-decoration: none;
